HelloUltraviolet/Fixtures/RejectedSource/Polymorphism/DuplicateTypeParameterName/Expected.uv
//! Expected diagnostic metadata for the DuplicateTypeParameterName rejected-source specimen.

expectedDiagnostic("E-TYP-2304", "rule.14.WF-Generic-Param")
